package edu.hitsz.factory.base;

import edu.hitsz.aircraft.AbstractAircraft;

public interface EnemyFactory {
    AbstractAircraft creatEnemy();
}
